--- a/SafeFood_Web_Spring_GJ_BYG_LSH/.classpath
+++ b/SafeFood_Web_Spring_GJ_BYG_LSH/.classpath
@@ -30,5 +30,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v8.5"/>
+	<classpathentry kind="src" path="/hwsp01_gj_02_byg"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
