--- a/SafeFood_Web_Spring_GJ_BYG_LSH/src/main/webapp/WEB-INF/web.xml
+++ b/SafeFood_Web_Spring_GJ_BYG_LSH/src/main/webapp/WEB-INF/web.xml
@@ -53,6 +53,10 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 	
+	 <welcome-file-list>
+        <welcome-file>/main</welcome-file>
+    </welcome-file-list>
+	
 	<!-- TODO 08 에러 페이지 연결
 	<error-page>
 		<error-code>404</error-code>
