--- a/SafeFood_Web_Spring_GJ_BYG_LSH/.project
+++ b/SafeFood_Web_Spring_GJ_BYG_LSH/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>SafeFood_Web_Spring_GJ_BYG_LSH</name>
+	<name>SafeFood_Web_SF_광주_02_BYG_LSH</name>
 	<comment></comment>
 	<projects>
 	</projects>
